ICA_reps/3T_HCP1200_MSMAll_d300_ts2_Z/component_maps/logs/psim_Amps212590.err
Traceback (most recent call last):
  File "/scratch/tyoeasley/brain_representations/src_py/run_comp_Psim.py", line 2, in <module>
    import comp_Psim_mtx as cpm
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/src_py/comp_Psim_mtx.py", line 51
    for i in range(n_subj):
                          ^
SyntaxError: invalid syntax
